FIX: Add min-height to remove whitespace after testing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -70,6 +70,9 @@ body {
 .horizontal-rule {
     border-color: #000;
 }
+.form-section {
+    min-height: 70vh;
+}
 /*--------------------------------------------Buttons*/
 #action-button {
     font-size: 2rem;
